# MagicSquare_18

./: README.md  _Refactoring_Readiness_Analysis_Report.md  pyproject.toml
docs/: PRD-4x4-magic-square-tdd.md  TC-CMM-arithmetic-unit-test-case-spec.md
prompt/: 01.cursor_4x4_magic_square_problem_definit.md  02.cursor_magic_square_project_design_spec.md  03.cursor_yaml_file_structure_for_magicsqu.md  04.cursor_user_journey_and_user_stories_fo.md  05.cursor_prd.md  06.cursor_magic_square_4x4_to_do.md
report/: 01.magic-square-problem-recognition-report.md  02.magic-square-dual-track-ui-logic-tdd-clean-architecture-report.md  03.cursorrules-design-and-implementation-report.md  04.user-journey-epic-to-level5-report.md  05.magic-square-prd-authoring-export-report.md  06.magic-square-readme-and-session-deliverables-report.md  07.cursor-session-git-branches-and-test-artifacts-report.md  09.Git_Feature_Dual_Track_TDD_Branch_Report.md  10.dual-track-first-red-green-check-report.md  11.refactoring-analysis-and-plan-report.md  12.KPT_MagicSquare_Prompt_Retrospective.23_정재훈.md  12.kpt-retrospective-draft.18_이재열.md  12.kpt-retrospective-draft.19_이재환.md  12.kpt-retrospective-draft.20_이정은.md  12.kpt-retrospective-draft.21_이현진.md  12.kpt-retrospective-draft.md  12.kpt_Team.md
src/.cursor/rules/: .cursorrules
src/magic_square/: __init__.py  boundary.py  constants.py  domain.py
src/magic_square/entity/: __init__.py  user.py
tests/boundary/: test_magic_square_boundary_red.py
tests/domain/: test_magic_square_domain_red.py
tests/entity/: test_user.py
(+3 files in other folders)
